<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightPrimaryColor"
    android:orientation="vertical"
    tools:context=".activities.CardDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Manageio.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_card_details_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Manageio.PopUpOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_details_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_details_cv_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/TextInputLayoutStyle"
                    android:textColorHint="@color/secondaryText"
                    app:hintTextColor="@color/primaryColor"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_card_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_card_name"
                        android:background="@color/white"
                        android:inputType="text"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/et_textSize"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="20dp"
            app:cardMaxElevation="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_details_cv_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_color"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/card_details_label_text_size" />

                <TextView
                    android:id="@+id/tv_select_label_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_color"
                    android:textColor="@color/primaryText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:text="@string/members"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/card_details_label_text_size" />

                <TextView
                    android:id="@+id/tv_select_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_members"
                    android:textColor="@color/primaryText" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_selected_members_list"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:text="@string/due_date"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/card_details_label_text_size" />

                <TextView
                    android:id="@+id/tv_select_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_due_date"
                    android:textColor="@color/primaryText" />

                <Button
                    android:id="@+id/btn_update_card_details"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/boogaloo"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/update"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>