<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:id="@+id/fl_login"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/darkPrimaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/boogaloo"
            android:gravity="center"
            android:text="@string/loginExclamation"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_login">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_til_email"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/emailText"
            android:textColorHint="@color/secondaryText"
            app:hintTextColor="@color/primaryColor">

            <EditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="@dimen/et_padding"
                android:textColor="@color/primaryText"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/et_textSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_til_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/passwordText"
            android:textColorHint="@color/secondaryText"
            app:hintTextColor="@color/primaryColor"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="@dimen/et_padding"
                android:textColor="@color/primaryText"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/et_textSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/forgot_password_text"
            android:textColor="@color/primaryColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/boogaloo"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/loginText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_lower_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/boogaloo"
            android:gravity="center"
            android:text="@string/doNotHaveAccountText"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/login_register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/boogaloo"
            android:gravity="center"
            android:text="@string/registerText"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>