<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_board"
    tools:context=".activities.CreateBoardActivity">

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/boogaloo"
        android:text="@string/createText"
        android:textColor="@color/darkPrimaryColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/boogaloo"
        android:text="@string/boardText"
        android:textColor="@color/darkPrimaryColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createText" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_boardImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:src="@color/lightPrimaryColor"
        app:civ_border_color="@color/secondaryText"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createBoard_til_boardName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="24dp"
        android:hint="@string/board_nameText"
        android:textColorHint="@color/secondaryText"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_boardImage">

        <EditText
            android:id="@+id/createBoard_et_boardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/darkPrimaryColor"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/et_textSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createBoard_createBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/boogaloo"
        android:padding="8dp"
        android:text="@string/createBtnText"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBoard_til_boardName" />
</androidx.constraintlayout.widget.ConstraintLayout>