<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/fl_forgot"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/darkPrimaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/forgotPass_headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/boogaloo"
            android:gravity="center"
            android:text="@string/forgotPassText"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_forgot">

        <TextView
            android:id="@+id/forgotPassDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/forgot_password_title_description"
            android:textColor="@color/primaryText"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_til_email"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:hint="@string/emailText"
            android:textColorHint="@color/secondaryText"
            app:hintTextColor="@color/primaryColor">

            <EditText
                android:id="@+id/forgot_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="@dimen/et_padding"
                android:textColor="@color/primaryText"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/et_textSize"
                 />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forgot_submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/boogaloo"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/submitText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>