<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_activity"
    tools:context=".activities.ProfileActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_iv_userImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_nav_user"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_til_userName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/usernameText"
            android:textColorHint="@color/secondaryText"
            app:hintTextColor="@color/primaryColor">

            <EditText
                android:id="@+id/profile_etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="@dimen/et_padding"
                android:textColor="@color/darkPrimaryColor"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/et_textSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_til_email"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/emailText"
            android:textColorHint="@color/secondaryText"
            app:hintTextColor="@color/primaryColor">

            <EditText
                android:id="@+id/profile_et_email"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="@dimen/et_padding"
                android:textColor="@color/darkPrimaryColor"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/et_textSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_til_mobile"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/mobileText"
            android:textColorHint="@color/secondaryText"
            app:hintTextColor="@color/primaryColor"
            >

            <EditText
                android:id="@+id/profile_et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:padding="@dimen/et_padding"
                android:textColor="@color/darkPrimaryColor"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/et_textSize" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/profile_updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/boogaloo"
        android:padding="8dp"
        android:text="@string/updateText"
        android:textSize="24sp"
        android:gravity="center"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>